# a-simple-todo-list

./: CMakeLists.txt  main.cpp
src/: Task.cpp  Task.hpp  TodoList.cpp  TodoList.hpp
tests/: TodoList_test.cpp  task_test.cpp
